removed failure of description, this *is* the conf file, no parsing needed....

--- a/bum.conf
+++ b/bum.conf
@@ -4,8 +4,7 @@
 #
 # USAGE: source bum.conf
 #
-# DESCRIPTION:  Global variables will be stored or set here, parsing of the bum
-#               configuration file will happen here as well.
+# DESCRIPTION:  Global variables will be stored or set here, other config bits
 #
 # OPTIONS: NONE - This is to be a library file
 # AUTHOR: Adam Miller - maxamillion@fedoraproject.org
